[2.1] add login signup

--- a/src/views/home.hbs
+++ b/src/views/home.hbs
@@ -1,1 +1,27 @@
-<h2>Home Page</h2>
+<div class="list-people">
+  <div class="bar-list-people">
+    <div class="search-people">
+      <form action="">
+        <div class="p-1 bg-light rounded rounded-pill shadow-sm">
+          <div class="input-group">
+            <div class="input-group-prepend">
+              <button id="button-addon2" type="submit" class="btn btn-link text-dark"><i class="fa fa-search"></i></button>
+            </div>
+            <input type="search" placeholder="Tìm kiếm" aria-describedby="button-addon2" class="form-control border-0 bg-light">
+          </div>
+        </div>
+      </form>
+    </div>
+    <div class="add-people">
+      <a href="">
+        <i class="fas fa-user-plus"></i>
+      </a>
+    </div>
+    <div class="add-many-people">
+      <a href="">
+        <i class="fas fa-users fa-lg"></i>
+      </a>
+    </div>
+  </div> 
+  <hr style="width: 90%">
+</div>
