--- a/src/views/home.hbs
+++ b/src/views/home.hbs
@@ -14,7 +14,7 @@
     </div>
     <div class="add-people">
       <a href="">
-        <i class="fas fa-user-plus"></i>
+        <i class="fas fa-user-plus" style="font-size: 18px;"></i>
       </a>
     </div>
     <div class="add-many-people">
