--- a/src/views/login.hbs
+++ b/src/views/login.hbs
@@ -2,18 +2,23 @@
 		<div class="container-login100" style="background-image: url('/img/bg-01.jpg');">
 			<div class="wrap-login100 p-l-55 p-r-55 p-t-40 p-b-40">
 				<form class="login100-form validate-form">
-					<span class="login100-form-title p-b-30">
+					<span class="login100-form-title p-b-20">
 						Đăng nhập
 					</span>
-					<div class="wrap-input100 validate-input m-b-23">
-						<span class="label-input100">Email</span>
-						<input class="input100" type="text" name="username" placeholder="Type your email">
+					<div class="error">
+						<div class="alert alert-danger" role="alert">
+							This is a danger alert—check it out!
+						</div>
+					</div>
+					<div class="wrap-input100 m-b-23">
+						<span class="label-input100">Email:</span>
+						<input class="input100" type="text" name="email" placeholder="Nhập email...">
 						{{!-- <span class="focus-input100" data-symbol="&#xf2b9;"></span> --}}
 					</div>
 
-					<div class="wrap-input100 validate-input">
-						<span class="label-input100">Password</span>
-						<input class="input100" type="password" name="pass" placeholder="Type your password">
+					<div class="wrap-input100">
+						<span class="label-input100">Mật khẩu:</span>
+						<input class="input100" type="password" name="pass" placeholder="Nhập mật khẩu...">
 						{{!-- <span class="focus-input100" data-symbol="&#xf190;"></span> --}}
 					</div>
 					
