--- a/src/views/signup.hbs
+++ b/src/views/signup.hbs
@@ -1,25 +1,32 @@
 	<div class="limiter">
 		<div class="container-login100" style="background-image: url('/img/bg-01.jpg');">
 			<div class="wrap-login100 p-l-55 p-r-55 p-t-30 p-b-30">
-				<form class="login100-form validate-form">
-					<span class="login100-form-title p-b-30">
+				<form class="login100-form validate-form" method="POST" action="/signup">
+					<span class="login100-form-title p-b-20">
 						Đăng ký
 					</span>
-					<div class="wrap-input100 validate-input m-b-23">
-						<span class="label-input100">Email</span>
-						<input class="input100" type="text" name="username" placeholder="Type your email">
+					{{>messages}}
+					<div class="wrap-input100 m-b-15">
+						<span class="label-input100">Email:</span>
+						<input class="input100" type="text" name="email" placeholder="Nhập email...">
 						{{!-- <span class="focus-input100" data-symbol="&#xf2b9;"></span> --}}
 					</div>
-
-					<div class="wrap-input100 validate-input m-b-23">
-						<span class="label-input100">Password</span>
-						<input class="input100" type="password" name="pass" placeholder="Type your password">
+					<div class="wrap-input100 m-b-15">
+						<div class="label-input100">Giới tính:</div>
+						<input type="radio" id="male" name="gender" value="male" style="margin-left: 45px;" checked="checked">
+						<label for="male" class="label-input100">Nam</label>&nbsp&nbsp
+						<input type="radio" id="female" name="gender" value="female">
+						<label for="female" class="label-input100">Nữ</label>
+					</div>
+					<div class="wrap-input100 m-b-15">
+						<span class="label-input100">Mật khẩu:</span>
+						<input class="input100" type="password" name="pass" placeholder="Nhập mật khẩu...">
 						{{!-- <span class="focus-input100" data-symbol="&#xf190;"></span> --}}
 					</div>
 
-          <div class="wrap-input100 validate-input">
-						<span class="label-input100">Re-Password</span>
-						<input class="input100" type="password" name="repass" placeholder="Type your password">
+          <div class="wrap-input100">
+						<span class="label-input100">Re-Mật khẩu:</span>
+						<input class="input100" type="password" name="repass" placeholder="Nhập lại mật khẩu...">
 						{{!-- <span class="focus-input100" data-symbol="&#xf190;"></span> --}}
 					</div>
 
