[2.3] comfirm_email_registration

--- a/src/views/OpenApp.hbs
+++ b/src/views/OpenApp.hbs
@@ -13,7 +13,7 @@
           <a href="/login" class="btn btn-primary">Đăng Nhập</a>
         </div>
         <div class="button-signup btn-app">
-          <a href="/signup" class="btn btn-primary">Đăng Ký</a>
+          <a href="/signup" class="btn btn-outline-dark">Đăng Ký</a>
         </div>
 		</div>
 	</div>
