--- a/src/views/login.hbs
+++ b/src/views/login.hbs
@@ -5,11 +5,7 @@
 					<span class="login100-form-title p-b-20">
 						Đăng nhập
 					</span>
-					<div class="error">
-						<div class="alert alert-danger" role="alert">
-							This is a danger alert—check it out!
-						</div>
-					</div>
+					{{>messages}}
 					<div class="wrap-input100 m-b-23">
 						<span class="label-input100">Email:</span>
 						<input class="input100" type="text" name="email" placeholder="Nhập email...">
