--- a/src/views/OpenApp.hbs
+++ b/src/views/OpenApp.hbs
@@ -1,7 +1,7 @@
 	<div class="login-register">
 		<div class="container-login100" style="background-image: url('/img/bg-01.jpg');">
       <div class="title-app">
-        <h1>Welcome To HD Chat</h1>
+        <h1>Welcome To My Chat</h1>
       </div>
       <hr>
       <div class="information-app">
