--- a/src/views/login.hbs
+++ b/src/views/login.hbs
@@ -1,7 +1,7 @@
 	<div class="limiter">
 		<div class="container-login100" style="background-image: url('/img/bg-01.jpg');">
 			<div class="wrap-login100 p-l-55 p-r-55 p-t-40 p-b-40">
-				<form class="login100-form validate-form">
+				<form class="login100-form validate-form" method="POST" action="/login">
 					<span class="login100-form-title p-b-20">
 						Đăng nhập
 					</span>
