--- a/src/public/css/main.css
+++ b/src/public/css/main.css
@@ -9,6 +9,8 @@
   width: 70px;
   background: rgb(0, 183, 255);
   text-align: center;
+  justify-content: space-around;
+  flex-direction: column;
   font-size: 25px;
   padding: 0px;
 }
@@ -16,12 +18,13 @@
 .toolbar{
   height: 20%;
   width: 100%;
-  display: list-item;
+  padding: 0px;
   justify-content: center;
   align-items: center;
 }
 .toolbar a {
-  color: white;
+  text-decoration: none;
+  font-family:'Times New Roman'
 }
 .toolbar i {
   cursor: pointer;
@@ -29,10 +32,100 @@
 .toolbar i:hover{
   color: black;
 }
-.toolbar:first-child{
+.item {
+  color: white;
+}
+.dropdown-menu span {
+  padding-left: 10px;
+}
+button:focus {
+  outline: 0;
+  box-shadow: none;
+  }
+
+/* .toolbar:first-child{
   margin-top: 100px;
+} */
+/* .imageId{
+  width: 60px;
+  height: 60px;
+  justify-content: center;
+} */
+.imageId {
+  width: 60px;
+  height: 60px;
+  object-fit: contain;
+  border-radius: 50%;
+}
+.user-image .btn {
+  width: 60px;
+  height: 60px;
+  border-radius: 50%;
+  padding: 0px;
+  border: none;
+}
+/*-------------------------------------------------------------------------------------------------------------------*/
+/* modal information user*/
+.imageUser {
+  width: 70px;
+  height: 70px;
+  object-fit: contain;
+  border-radius: 50%;
+  position: absolute;
+  top: -35px;
+  left: 140px;
+}
+.information-user {
+  flex-direction: column;
+  display: flex;
+  width: 100%;
+  height: 100%;
+}
+.row1{
+  height: 180px;
+  width: 100%;
+  padding: 0px;
+}
+.row2 {
+  width: 100%;
+}
+.modal-body{
+  padding: 0px;
+}
+.modal-content{
+  height: 600px;
+  width: 350px;
+}
+.row1 img {
+  object-fit: cover;
+  height: 180px;
+  width: 100%;
+}
+.avatar-update {
+  width: 100%;
+  height: 40px;
+  position: relative;
+}
+.username-update {
+  text-align: center;
+  height: 80px;
+}
+#edit-username {
+  text-align: center;
+  border: none;
+  outline: none;
+}
+/* .telephone-update {
+  text-align: center;
+  padding: 10px;
+  margin: 10px 0px;
+} */
+.row2 label {
+  width: 150px;
+  padding: 10px 0px 10px 25px
 }
 
+/*-------------------------------------------------------------------------------------------------------------------*/
 /*.list-people */
 .list-people{
   height: 100%;
@@ -56,6 +149,7 @@
   color: #aaa;
   font-style: italic;
 }
+
 .search-people{
   width: 70%;
   padding: 15px;
@@ -83,4 +177,7 @@
 }
 .bar-list-people i:hover{
   opacity: 0.5;
+}
+hr{
+  width: 80%;
 }
