--- a/src/public/css/main.css
+++ b/src/public/css/main.css
@@ -73,7 +73,7 @@ button:focus {
   border-radius: 50%;
   position: absolute;
   top: -35px;
-  left: 140px;
+  transform: translateX(200%)
 }
 .information-user {
   flex-direction: column;
@@ -106,9 +106,35 @@ button:focus {
   height: 40px;
   position: relative;
 }
+.address-update {
+  display: flex;
+}
+#button-update-avatar:hover {
+  /* opacity: 0.8; */
+  color: #0075ff
+}
+#button-update-avatar:focus {
+  outline: none !important;
+  border: 0px;
+}
+#button-update-avatar{
+  outline: none;
+  position: relative;
+  top: 15px;
+  left: 185px;
+  font-size: 15px;
+  border: 0px;
+  background: none;
+}
+.input-update{
+  width: 50%;
+  outline: none;
+  border: rgb(216, 216, 216) solid 1px;
+  border-radius: 5px;
+}
 .username-update {
   text-align: center;
-  height: 80px;
+  height: 50px;
 }
 #edit-username {
   text-align: center;
