--- a/src/views/partials/header.hbs
+++ b/src/views/partials/header.hbs
@@ -40,40 +40,37 @@
           <div class="row1">
             <img src="/img/Background-default.jpg" alt="">
           </div>
+          <input type="file" name="profile-avatar" id="profileAvatarPicker" class="inputfile" style="display: none;">
           <div class="avatar-update">
-            <img src="/img/avatar/{{user.avatar}}" alt="avatar default" class="imageUser" >
+            <div class="edit-avatar" id="edit-avatar" >
+              <img src="/img/avatar/{{user.avatar}}" alt="avatar" class="imageUser" id="imageUserid">
+            </div>
+            <span><button type="button" class="button-update-avatar" id="button-update-avatar"><i class="fas fa-camera-retro"></i></button></span>
           </div>
           <div class="username-update">
             <input type="text" value="{{user.username}}" id="edit-username">
           </div>
           <div class="row2">
             <div class="telephone-update">
-              <label for="phone">Số điện thoại: </label><input type="text" value="+84{{user.phone}}" name="phone">
+              <label for="phone">Số điện thoại: </label><input type="text" value="+84{{user.phone}}" name="phone" class="input-update" id="input-phone-update">
             </div>
             <div class="gender-update">
-              <input type="hidden" value="{{user.gender}}" id="checkgender">
+              <input type="hidden" value="{{isChecked user.gender}}" id="checkgender">
               <label for="">Giới tính: </label>
-              <input type="radio" value="male" name="gender" id="male"> Nam
-              <input type="radio" value="female" name="gender" id="female"> Nữ
+              <input type="radio" value="male" name="gender" id="edit-gender-male" {{isChecked user.gender "male"}}> Nam
+              <input type="radio" value="female" name="gender" id="edit-gender-female" {{isChecked user.gender "female"}}> Nữ
+            </div>
+            <div class="address-update">
+              <label for="address">Địa chỉ: </label><textarea type="text" value="{{user.address}}" name="address" rows="2" class="input-update" id="edit-address-update"></textarea>
             </div>
           </div>
         </div>
       </div>
       <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-dismiss="modal">Đóng</button>
-        <button type="button" class="btn btn-primary">Cập nhật</button>
+        <button type="button" class="btn btn-secondary" id="button-cancel-update-info">Hủy bỏ</button>
+        <button type="button" class="btn btn-primary" id="button-update-info">Cập nhật</button>
       </div>
     </div>
   </div>
 </div>
 <script src="/javascript/jquery.js"></script>
-<script>
-  $(document).ready(function() {
-    var check = $('#checkgender').val()
-    if(check === "male") {
-      $("#male").attr('checked', 'checked');
-    } else {
-      $("#female").attr('checked', 'checked');
-    }
-  })
-</script>
