--- a/src/public/css/main.css
+++ b/src/public/css/main.css
@@ -80,6 +80,7 @@ button:focus {
   display: flex;
   width: 100%;
   height: 100%;
+  font-size: 14px;
 }
 .row1{
   height: 180px;
@@ -92,8 +93,15 @@ button:focus {
 .modal-body{
   padding: 0px;
 }
+.message-warning {
+  margin: 10px;
+  padding: 6px;
+  padding-left: 10px;
+  display: none;
+  font-size: 13px;
+}
 .modal-content{
-  height: 600px;
+  min-height: 580px;
   width: 350px;
 }
 .row1 img {
