--- a/src/views/home.hbs
+++ b/src/views/home.hbs
@@ -14,14 +14,35 @@
       </form>
     </div>
     <div class="add-people">
-      <a href="">
+      <button class="btn btn-outline add-new-people" data-toggle="modal" data-target="#add-someone" type="button">
         <i class="fas fa-user-plus" style="font-size: 18px;"></i>
-      </a>
+      </button>
+      <!-- Modal -->
+       {{>modal-add-people}} 
     </div>
-    <div class="add-many-people">
-      <a href="">
+    <div class="add-many-people ">
+      <button class="btn btn-outline add-new-group" data-toggle="modal" data-target="#add-group-chat" type="button">
         <i class="fas fa-users fa-lg"></i>
-      </a>
+      </button>
+      <div class="modal fade" id="add-group-chat" tabindex="-1" role="dialog" aria-labelledby="exampleModalLongTitle" aria-hidden="true">
+        <div class="modal-dialog" role="document">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h5 class="modal-title" id="exampleModalLongTitle">Add group</h5>
+              <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+              </button>
+            </div>
+            <div class="modal-body">
+              ...
+            </div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+              <button type="button" class="btn btn-primary">Save changes</button>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
   </div> 
   <hr style="width: 90%">
