--- a/src/views/home.hbs
+++ b/src/views/home.hbs
@@ -1,4 +1,3 @@
-
 <div class="list-people">
   <div class="bar-list-people">
     <div class="search-people">
@@ -6,9 +5,11 @@
         <div class="p-1 bg-light rounded rounded-pill shadow-sm">
           <div class="input-group">
             <div class="input-group-prepend">
-              <button id="button-addon2" type="submit" class="btn btn-link text-dark"><i class="fa fa-search"></i></button>
+              <button id="button-addon2" type="submit" class="btn btn-link text-dark"><i
+                  class="fa fa-search"></i></button>
             </div>
-            <input type="search" placeholder="Tìm kiếm" aria-describedby="button-addon2" class="form-control border-0 bg-light">
+            <input type="search" placeholder="Tìm kiếm" aria-describedby="button-addon2"
+              class="form-control border-0 bg-light">
           </div>
         </div>
       </form>
@@ -18,13 +19,14 @@
         <i class="fas fa-user-plus" style="font-size: 18px;"></i>
       </button>
       <!-- Modal -->
-       {{>modal-add-people}} 
+    {{>modal-add-people}}
     </div>
     <div class="add-many-people ">
       <button class="btn btn-outline add-new-group" data-toggle="modal" data-target="#add-group-chat" type="button">
         <i class="fas fa-users fa-lg"></i>
       </button>
-      <div class="modal fade" id="add-group-chat" tabindex="-1" role="dialog" aria-labelledby="exampleModalLongTitle" aria-hidden="true">
+      <div class="modal fade" id="add-group-chat" tabindex="-1" role="dialog" aria-labelledby="exampleModalLongTitle"
+        aria-hidden="true">
         <div class="modal-dialog" role="document">
           <div class="modal-content">
             <div class="modal-header">
@@ -44,6 +46,7 @@
         </div>
       </div>
     </div>
-  </div> 
+  </div>
   <hr style="width: 90%">
+
 </div>
