--- a/src/public/css/main.css
+++ b/src/public/css/main.css
@@ -243,3 +243,11 @@ input:focus {
    color: #aaa;
    font-style: italic;
  }
+  ul {
+  list-style: none;
+  }
+
+  .item{
+    background:none;
+    border: none;
+  }
