--- a/src/views/partials/header.hbs
+++ b/src/views/partials/header.hbs
@@ -16,7 +16,7 @@
     <a href="" class="item"><i class="fas fa-comment-dots"></i></a>
   </div>
   <div class="phonebook toolbar">
-    <a href="" class="item"><i class="far fa-address-book"></i></a>
+    <button class="btn-list-friend item" data-id ="{{user._id}}"><i class="far fa-address-book"></i></button>
   </div>
   <div class="notification toolbar">
     <a href="" class="item"><i class="far fa-bell"></i></a>
