--- a/src/views/home.hbs
+++ b/src/views/home.hbs
@@ -18,35 +18,18 @@
       <button class="btn btn-outline add-new-people" data-toggle="modal" data-target="#add-someone" type="button">
         <i class="fas fa-user-plus" style="font-size: 18px;"></i>
       </button>
-      <!-- Modal -->
-    {{>modal-add-people}}
+      <!-- Modal add contact -->
+      {{>modal-add-contact}}
     </div>
     <div class="add-many-people ">
       <button class="btn btn-outline add-new-group" data-toggle="modal" data-target="#add-group-chat" type="button">
         <i class="fas fa-users fa-lg"></i>
       </button>
-      <div class="modal fade" id="add-group-chat" tabindex="-1" role="dialog" aria-labelledby="exampleModalLongTitle"
-        aria-hidden="true">
-        <div class="modal-dialog" role="document">
-          <div class="modal-content">
-            <div class="modal-header">
-              <h5 class="modal-title" id="exampleModalLongTitle">Add group</h5>
-              <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                <span aria-hidden="true">&times;</span>
-              </button>
-            </div>
-            <div class="modal-body">
-              ...
-            </div>
-            <div class="modal-footer">
-              <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-              <button type="button" class="btn btn-primary">Save changes</button>
-            </div>
-          </div>
-        </div>
-      </div>
+
+      <!-- Modal add group contact -->
+      {{>modal-group-contact}}
     </div>
   </div>
   <hr style="width: 90%">
-
+  {{>list-friend}}
 </div>
