--- a/src/views/layouts/main.hbs
+++ b/src/views/layouts/main.hbs
@@ -29,6 +29,9 @@
 </body>
 
 <!-- JS, Popper.js, and jQuery -->
+<script src="socket.io/socket.io.js"></script>
+
+<script src="/javascript/main-config.js"></script>
 <script src="/javascript/jquery.js"></script>
 <script src="/javascript/notify.js"></script>
 <script src="/javascript/findUserContact.js"></script>
