--- a/src/views/home.hbs
+++ b/src/views/home.hbs
@@ -14,10 +14,11 @@
         </div>
       </form>
     </div>
-    <div class="add-people">
+    <div class="add-people" style="display: flex;">
       <button class="btn btn-outline add-new-people" data-toggle="modal" data-target="#add-someone" type="button">
         <i class="fas fa-user-plus" style="font-size: 18px;"></i>
       </button>
+      <span class="badge badge-pill badge-danger badge-notification-add-contact"></span>
       <!-- Modal add contact -->
       {{>modal-add-contact}}
     </div>
@@ -31,5 +32,7 @@
     </div>
   </div>
   <hr style="width: 90%">
+  {{>content-chat}}
   {{>list-friend}}
+  {{>notification}}
 </div>
