--- a/src/views/partials/modal-add-contact.hbs
+++ b/src/views/partials/modal-add-contact.hbs
@@ -13,7 +13,7 @@
           <h6 class="text-muted" data-button="2">Đang chờ xác nhận<span class="badge badge-info badge-notification number-noti-confirm" data-button="2"></span></h6>
         </div>
         <div class="tabs" id="tab04">
-          <h6 class="text-muted" data-button="3">Yêu cầu kết bạn<span class="badge badge-danger badge-notification number-noti-sent" data-button="3">9</span></h6>
+          <h6 class="text-muted" data-button="3">Yêu cầu kết bạn<span class="badge badge-danger badge-notification number-noti-sent" data-button="3"></span></h6>
         </div>
       </div>
       <div class="line"></div>
