add_contact_realtime

--- a/src/views/partials/modal-add-contact.hbs
+++ b/src/views/partials/modal-add-contact.hbs
@@ -73,45 +73,7 @@
           </div>
         </fieldset>
         <fieldset id="tab041">
-          <div class="bg-light">
-            <h5 class="text-center mb-4 mt-0 pt-4">Education</h5>
-            <form>
-              <div class="form-group pb-2 px-3"> <input type="text" placeholder="Enter College Name"
-                  class="form-control"> </div>
-              <div class="form-group row pb-2 px-3">
-                <div class="col-6"> <input type="text" placeholder="Percentage" class="form-control"> </div>
-                <div class="col-6"> <input type="text" placeholder="Grade" class="form-control"> </div>
-              </div>
-              <div class="form-group px-3 pb-2"> <label class="form-control-label">
-                  <h6>What are you good at ?</h6>
-                </label>
-                <div class="custom-control custom-checkbox"> <input class="custom-control-input" id="option1"
-                    type="checkbox" value=""> <label class="custom-control-label" for="option1">Web
-                    Development</label>
-                </div>
-                <div class="custom-control custom-checkbox"> <input class="custom-control-input" id="option2"
-                    type="checkbox" value=""> <label class="custom-control-label" for="option2">Data Structures &
-                    Algorithms</label> </div>
-                <div class="custom-control custom-checkbox"> <input class="custom-control-input" id="option3"
-                    type="checkbox" value=""> <label class="custom-control-label" for="option3">Android
-                    Development</label> </div>
-                <div class="custom-control custom-checkbox"> <input class="custom-control-input" id="option4"
-                    type="checkbox" value=""> <label class="custom-control-label" for="option4">Blockchain</label>
-                </div>
-                <div class="custom-control custom-checkbox"> <input class="custom-control-input" id="option5"
-                    type="checkbox" value=""> <label class="custom-control-label" for="option5">Machine Learning
-                    Algorithms</label> </div>
-              </div>
-              <div class="form-group pb-5 row justify-content-center"> <button type="button"
-                  class="btn btn-primary px-3">Submit</button> </div>
-            </form>
-          </div>
-          <div class="px-3">
-            <h6 class="pt-3 pb-3 mb-4 border-bottom"><span class="fa fa-rocket"></span> Trending Technologies</h6>
-            <h6 class="text-primary pb-2"><a href="#">Augmented Reality and Virtual Reality</a></h6>
-            <h6 class="text-primary pb-2"><a href="#">Angular and React</a></h6>
-            <h6 class="text-primary pb-2"><a href="#">Big Data and Hadoop</a></h6>
-            <h6 class="text-primary pb-4"><a href="#">Internet of Things (IoT)</a></h6>
+          <div class="bg-light content-request-contact">
           </div>
         </fieldset>
       </div>
