--- a/src/public/css/main.css
+++ b/src/public/css/main.css
@@ -339,9 +339,15 @@ input:focus {
   min-height: 60px;
   border-radius: 5px;
   border:rgb(223, 222, 222) 1px solid;
-  background: rgb(243, 241, 241);
   display: flex;
+  cursor: pointer;
+  background: white;
 }
+
+.big-border:hover {
+  background: rgb(243, 241, 241);
+}
+
 .avatar-notification img {
   margin: auto;
   height: 60px;
@@ -382,4 +388,23 @@ input:focus {
   right: 10px;
   padding: 1px 0px;
   font-size: 12px;
+}
+
+.check-status {
+  position: absolute;
+  width: 13px;
+  height: 13px;
+  border-radius: 50%;
+  top: 45px;
+  right: 5px;
+  background: green;
+  border: white 1px solid;
+}
+.btn-avatar-user {
+  position: relative;
+}
+
+.body-setup {
+  margin: 20px 20px;
+  text-align: center;
 }
