--- a/src/views/layouts/main.hbs
+++ b/src/views/layouts/main.hbs
@@ -32,6 +32,7 @@
 <script src="socket.io/socket.io.js"></script>
 
 <script src="/javascript/main-config.js"></script>
+<script src="/javascript/check-status.js"></script>
 <script src="/javascript/jquery.js"></script>
 <script src="/javascript/notify.js"></script>
 <script src="/javascript/findUserContact.js"></script>
