--- a/src/views/partials/header.hbs
+++ b/src/views/partials/header.hbs
@@ -1,12 +1,15 @@
 
 <div class="nav">
   <div class="user-image toolbar">
-    <div class="btn-group">
-      <button class="btn" type="button" data-toggle="dropdown" aria-haspopup="true"><img src="/img/avatar/{{user.avatar}}" alt="avatar default" class="imageId" id="avatar-by-user"></button>
+    <div class="btn-group btn-avatar-user">
+      <button class="btn" type="button" data-toggle="dropdown" aria-haspopup="true">
+        <img src="/img/avatar/{{user.avatar}}" alt="avatar default" class="imageId" id="avatar-by-user">
+        <div class="check-status"></div>
+      </button>
       <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
         <button class="dropdown-item" type="button" id="button-user" data-toggle="modal" data-target="#exampleModalCenter"><i class="fas fa-user-circle" ></i><span>Tài khoản</span></button>
         <hr>
-        <a class="dropdown-item" href="#"><i class="fas fa-cogs"></i><span>Cài đặt</span></a>
+        <button class="dropdown-item" type="button" id="button-setup" data-toggle="modal" data-target="#modal-setup"><i class="fas fa-cogs"></i><span>Cài đặt</span></button>
         <hr>
         <a class="dropdown-item" href="/logout" style="color: red;"><i class="fas fa-sign-out-alt"></i><span>Đăng xuất</span></a>
       </div>
@@ -76,4 +79,6 @@
     </div>
   </div>
 </div>
+
+{{>modal-setup}}
 <script src="/javascript/jquery.js"></script>
