--- a/src/views/partials/notification.hbs
+++ b/src/views/partials/notification.hbs
@@ -4,5 +4,10 @@
   </div>
   <div class="message-all">
     {{!-- notification contact --}}
+    {{#if notifsByUser}}
+    {{#each notifsByUser as |notifByUser|}}
+      {{{notifByUser}}}
+    {{/each}}
+    {{/if}}
   </div>
 </div>
