--- a/src/views/layouts/main.hbs
+++ b/src/views/layouts/main.hbs
@@ -37,6 +37,9 @@
 <script src="/javascript/notify.js"></script>
 <script src="/javascript/findUserContact.js"></script>
 <script src="/javascript/add-contact.js"></script>
+<script src="/javascript/reject-request-contact.js"></script>
+<script src="/javascript/info-contact.js"></script>
+<script src="/javascript/add-to-friend.js"></script>
 <script src="/javascript/remove-request-contact.js"></script>
 <script src="/javascript/count-number-noti.js"></script>
 <script src="/javascript/updateUser.js"></script>
