--- a/src/public/css/main.css
+++ b/src/public/css/main.css
@@ -259,15 +259,18 @@ input:focus {
   width: 50px;
   height: 50px;
   border-radius: 50%;
+  border: #aaa 1px solid;
 }
 .image-contact-item{
   width: 30%;
-  float: left;
+  display: flex;
+  align-items: center;
 }
-.username-contact-item {
-  width: 50%;
-  float: left;
+
+.image-contact-item h6 {
+  margin-left: 15px;
 }
+
 .more-option{
   width: 20%;
   float: left;
@@ -282,16 +285,21 @@ input:focus {
   border:rgb(223, 222, 222) 1px solid;
   background: rgb(243, 241, 241);
   display: flex;
+  justify-content: space-between;
+  cursor: pointer;
 }
 .list-friend-ul{
   padding: 10px;
   max-height: 470px;
   border-radius: 5px;
-  overflow-y: auto;
   margin: auto;
   padding: 7px;
   width: 95%;
 }
+.list-friend-li:hover {
+  background: rgb(167, 165, 165);
+}
+
 .p-username{
   margin-bottom: 0px;
 }
@@ -341,11 +349,11 @@ input:focus {
   border:rgb(223, 222, 222) 1px solid;
   display: flex;
   cursor: pointer;
-  background: white;
+  background: rgb(243, 241, 241);
 }
 
 .big-border:hover {
-  background: rgb(243, 241, 241);
+  background: rgb(177, 176, 176);
 }
 
 .avatar-notification img {
@@ -407,4 +415,49 @@ input:focus {
 .body-setup {
   margin: 20px 20px;
   text-align: center;
+}
+
+/* user request*/
+.User-Request-Border {
+  margin: 10px auto 5px;
+  padding: 10px;
+  width: 95%;
+  min-height: 60px;
+  border-radius: 5px;
+  border:rgb(223, 222, 222) 1px solid;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.infor-user-request img {
+  width: 60px;
+  height: 60px;
+  border-radius: 50%;
+  border: #aaa 1px solid;
+}
+.infor-user-request {
+  display: flex;
+  align-items: center;
+}
+.infor-user-request h6 {
+  margin-left: 15px;
+}
+
+.accept-request-contact {
+  border-radius: 60px;
+  height: 30px;
+  padding: 0px 12px;
+  font-size: 15px;
+}
+
+
+/* class show modal*/
+.show-modal {
+  top: 5%;
+  left: 40%;
+  z-index: 1;
+  position: fixed;
+  display: block;
+  background: rgb(243, 241, 241);
 }
