--- a/src/views/partials/header.hbs
+++ b/src/views/partials/header.hbs
@@ -19,7 +19,7 @@
     <button class="btn-content-chat item"><i class="fas fa-comment-dots"></i></button><span class="badge badge-danger notification-badge one">9</span>
   </div>
   <div class="phonebook toolbar">
-    <button class="btn-list-friend item" data-id ="{{user._id}}"><i class="far fa-address-book"></i></button><span class="badge badge-danger notification-badge two">9</span>
+    <button class="btn-list-friend item" data-id ="{{user._id}}"><i class="far fa-address-book"></i></button><span class="badge badge-danger notification-badge two notification-list-friend-contact"></span>
   </div>
   <div class="notification toolbar">
     <button class="btn-notification item"><i class="far fa-bell"></i></button><span class="badge badge-danger notification-badge three notification-message-badge"></span>
