--- a/src/views/partials/modal-add-contact.hbs
+++ b/src/views/partials/modal-add-contact.hbs
@@ -7,12 +7,9 @@
           <h6 class="font-weight-bold">Tìm bạn bè</h6>
         </div>
         <div class="tabs" id="tab02">
-          <h6 class="text-muted" data-button="1">Danh bạ<span class="badge badge-success badge-notification number-noti-list-friend" data-button="1">9</span></h6>
-        </div>
-        <div class="tabs" id="tab03">
           <h6 class="text-muted" data-button="2">Đang chờ xác nhận<span class="badge badge-info badge-notification number-noti-confirm" data-button="2"></span></h6>
         </div>
-        <div class="tabs" id="tab04">
+        <div class="tabs" id="tab03">
           <h6 class="text-muted" data-button="3">Yêu cầu kết bạn<span class="badge badge-danger badge-notification number-noti-sent" data-button="3"></span></h6>
         </div>
       </div>
@@ -20,7 +17,7 @@
       <div class="modal-body p-0">
         <fieldset class="show" id="tab011">
           <div class="bg-light m-b-4">
-            <div class="input-group m-2 border rounded-pill p-1" style="width: 555px;">
+            <div class="input-group m-2 border rounded-pill p-1" style="width: 470px;">
               <input type="search" placeholder="Nhập email hoặc tên người dùng ..." aria-describedby="button-addon3"
                 class="form-control bg-none border-0 m-l-1" id="input-keyword">
               <div class="input-group-append border-0">
@@ -35,45 +32,24 @@
         </fieldset>
         <fieldset id="tab021">
           <div class="bg-light">
-            <h5 class="text-center mb-4 mt-0 pt-4">Knowledge Center</h5>
-            <form>
-              <div class="form-group pb-5 px-3"> <select name="account" class="form-control">
-                  <option selected disabled>Select Product</option>
-                  <option>Product 1</option>
-                  <option>Product 2</option>
-                  <option>Product 3</option>
-                  <option>Product 4</option>
-                </select> </div>
-            </form>
-          </div>
-          <div class="px-3">
-            <h6 class="pt-3 pb-3 mb-4 border-bottom"><span class="fa fa-star"></span> Popular Topics</h6>
-            <h6 class="text-primary pb-2"><a href="#">Getting started with Blazemeter</a></h6>
-            <h6 class="text-primary pb-2"><a href="#">Creating tests</a></h6>
-            <h6 class="text-primary pb-4"><a href="#">Running tests</a></h6>
           </div>
         </fieldset>
         <fieldset id="tab031">
-          <div class="bg-light">
-            <h5 class="text-center mb-4 mt-0 pt-4">Communities</h5>
-            <form>
-              <div class="form-group pb-5 px-3 row justify-content-center"> <button type="button"
-                  class="btn btn-primary">New Community +</button> </div>
-            </form>
-          </div>
-          <div class="px-3">
-            <div class="border border-1 box">
-              <h5>Community 1</h5>
-              <p class="text-muted mb-1">Members : <strong>27</strong></p>
-            </div>
-            <div class="border border-1 box">
-              <h5>Community 2</h5>
-              <p class="text-muted mb-1">Members : <strong>16</strong></p>
-            </div>
-          </div>
-        </fieldset>
-        <fieldset id="tab041">
           <div class="bg-light content-request-contact">
+            {{#if userRequestSenders}}
+            {{#each userRequestSenders as |item|}}
+            <div class="User-Request-Border" data-id="{{item._id}}">
+              <div class="infor-user-request">
+                <img src="/img/avatar/{{item.avatar}}" alt="">
+                <h6>{{item.username}}</h6>
+              </div>
+              <div class="button-request-handling">
+                <button type="button" class="btn btn-primary accept-request-contact" id="accept-request-contact" data-id="{{item._id}}" >Đồng ý</button>
+                <button type="button" class="btn btn-cancel-request-contact" id="btn-cancel-request-contact" data-id="{{item._id}}"><i class="fas fa-times-circle"></i></button>
+              </div>
+            </div>
+            {{/each}}
+            {{/if}}
           </div>
         </fieldset>
       </div>
