--- a/src/public/css/main.css
+++ b/src/public/css/main.css
@@ -444,7 +444,7 @@ input:focus {
   margin-left: 15px;
 }
 
-.accept-request-contact {
+.btn-design {
   border-radius: 60px;
   height: 30px;
   padding: 0px 12px;
