--- a/src/views/partials/modal-add-contact.hbs
+++ b/src/views/partials/modal-add-contact.hbs
@@ -31,7 +31,7 @@
           <div class="px-3" id="px-3"></div>
         </fieldset>
         <fieldset id="tab021">
-          <div class="bg-light">
+          <div class="bg-light load-all-request-contact">
           </div>
         </fieldset>
         <fieldset id="tab031">
@@ -44,7 +44,7 @@
                 <h6>{{item.username}}</h6>
               </div>
               <div class="button-request-handling">
-                <button type="button" class="btn btn-primary accept-request-contact" id="accept-request-contact" data-id="{{item._id}}" >Đồng ý</button>
+                <button type="button" class="btn btn-primary accept-request-contact btn-design" id="accept-request-contact" data-id="{{item._id}}" >Đồng ý</button>
                 <button type="button" class="btn btn-cancel-request-contact" id="btn-cancel-request-contact" data-id="{{item._id}}"><i class="fas fa-times-circle"></i></button>
               </div>
             </div>
