--- a/src/views/partials/modal-group-contact.hbs
+++ b/src/views/partials/modal-group-contact.hbs
@@ -1,19 +1,35 @@
 <div class="modal fade" id="add-group-chat" tabindex="-1" role="dialog" aria-labelledby="exampleModalLongTitle"
   aria-hidden="true">
   <div class="modal-dialog" role="document">
-    <div class="modal-content">
+    <div class="modal-content modal-content-chat-group">
       <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLongTitle">Add group</h5>
+        <h5 class="modal-title" id="exampleModalLongTitle">Tạo nhóm</h5>
         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
       </div>
       <div class="modal-body">
-        ...
+        <div class="input-group-name">
+          <label for="group-name">Tên nhóm : </label>
+          <div class="input-group mb-3">
+            <input type="text" class="form-control" id="group-name" aria-describedby="basic-addon3" placeholder="Nhập tên nhóm ...">
+          </div>
+        </div>
+        <div class="list-friend-to-add">
+          <h6>Danh sách</h6>
+          <div class="list-to-add">
+            <div class="form-check">
+              <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+              <label class="form-check-label" for="flexCheckDefault">
+                Hoàng Diễn
+              </label>
+            </div>
+          </div>
+        </div>
       </div>
       <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-primary">Save changes</button>
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Hủy</button>
+        <button type="button" class="btn btn-primary">Tạo nhóm</button>
       </div>
     </div>
   </div>
