--- a/src/views/partials/header.hbs
+++ b/src/views/partials/header.hbs
@@ -16,7 +16,7 @@
     </div>
   </div>
   <div class="message toolbar">
-    <button class="btn-content-chat item"><i class="fas fa-comment-dots"></i></button><span class="badge badge-danger notification-badge one">9</span>
+    <button class="btn-content-chat item"><i class="fas fa-comment-dots"></i></button><span class="badge badge-danger notification-badge one"></span>
   </div>
   <div class="phonebook toolbar">
     <button class="btn-list-friend item" data-id ="{{user._id}}"><i class="far fa-address-book"></i></button><span class="badge badge-danger notification-badge two notification-list-friend-contact"></span>
