--- a/src/views/layouts/main.hbs
+++ b/src/views/layouts/main.hbs
@@ -35,6 +35,7 @@
 <script src="/javascript/check-status.js"></script>
 <script src="/javascript/jquery.js"></script>
 <script src="/javascript/notify.js"></script>
+<script src="/javascript/getListFriend.js"></script>
 <script src="/javascript/findUserContact.js"></script>
 <script src="/javascript/add-contact.js"></script>
 <script src="/javascript/load-request-add-contact.js"></script>
