--- a/src/views/home.hbs
+++ b/src/views/home.hbs
@@ -18,8 +18,13 @@
       <button class="btn btn-outline add-new-people" data-toggle="modal" data-target="#add-someone" type="button">
         <i class="fas fa-user-plus" style="font-size: 18px;"></i>
       </button>
+      {{#ifCond countNotiUnread '!==' 0}}
+      <span class="badge badge-pill badge-danger badge-notification-add-contact">{{{countNotiUnread}}}</span>
+      {{else}}
       <span class="badge badge-pill badge-danger badge-notification-add-contact"></span>
+      {{/ifCond}}
       <!-- Modal add contact -->
+
       {{>modal-add-contact}}
     </div>
     <div class="add-many-people ">
