--- a/src/views/partials/modal-group-contact.hbs
+++ b/src/views/partials/modal-group-contact.hbs
@@ -12,24 +12,29 @@
         <div class="input-group-name">
           <label for="group-name">Tên nhóm : </label>
           <div class="input-group mb-3">
-            <input type="text" class="form-control" id="group-name" aria-describedby="basic-addon3" placeholder="Nhập tên nhóm ...">
+            <input type="text" class="form-control" id="group-name" aria-describedby="basic-addon3"
+              placeholder="Nhập tên nhóm ...">
           </div>
         </div>
         <div class="list-friend-to-add">
-          <h6>Danh sách</h6>
           <div class="list-to-add">
-            <div class="form-check">
-              <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
-              <label class="form-check-label" for="flexCheckDefault">
-                Hoàng Diễn
-              </label>
+            {{#if friendContacts}}
+            {{#each friendContacts as |item|}}
+            <div class="form-check list-contact-check" data-id="{{{item._id}}}">
+              <div class="item-list-contact">
+                <img src="/img/avatar/{{{item.avatar}}}" alt="image" class="image-item-list-contact">
+                <h6>{{{item.username}}}</h6>
+                <input class="form-check-input " type="checkbox" value="{{{item._id}}}" id="flexCheckDefault">
+              </div>
             </div>
+            {{/each}}
+            {{/if}}
           </div>
         </div>
       </div>
       <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-dismiss="modal">Hủy</button>
-        <button type="button" class="btn btn-primary">Tạo nhóm</button>
+        <button type="button" class="btn btn-secondary cancel-get-list-contact" data-dismiss="modal">Hủy</button>
+        <button type="button" class="btn btn-primary target-get-list-contact">Tạo nhóm</button>
       </div>
     </div>
   </div>
